@@ -18,7 +18,10 @@ package uk.ac.cam.cl.dtg.segue.api.managers;
 
 import static java.util.Objects.requireNonNull;
 import static org.apache.commons.lang3.text.WordUtils.capitalizeFully;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EMAIL_TEMPLATE_TOKEN_PROVIDER;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_INVALID_EMAIL;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ANONYMOUS_USER;
+import static uk.ac.cam.cl.dtg.segue.api.Constants.EMAIL_SIGNATURE;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.HMAC_SALT;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.HOST_NAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.LAST_SEEN_UPDATE_FREQUENCY_MINUTES;
@@ -56,7 +59,6 @@ import java.util.Objects;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.EnumUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Validate;
@@ -98,8 +100,8 @@ import uk.ac.cam.cl.dtg.segue.auth.exceptions.AuthenticatorSecurityException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.CodeExchangeException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.CrossSiteRequestForgeryException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.DuplicateAccountException;
-import uk.ac.cam.cl.dtg.segue.auth.exceptions.FailedToHashPasswordException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.IncorrectCredentialsProvidedException;
+import uk.ac.cam.cl.dtg.segue.auth.exceptions.InvalidEmailException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.InvalidNameException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.InvalidPasswordException;
 import uk.ac.cam.cl.dtg.segue.auth.exceptions.InvalidTokenException;
@@ -158,19 +160,19 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Create an instance of the user manager class.
    *
-   * @param database                  - an IUserDataManager that will support persistence.
-   * @param questionDb                - allows this class to instruct the questionDB to merge an anonymous user with a
-   *                                        registered user.
-   * @param properties                - A property loader
-   * @param providersToRegister       - A map of known authentication providers.
-   * @param dtoMapper                 - the preconfigured DO to DTO object mapper for user objects.
-   * @param emailQueue                - the preconfigured communicator manager for sending e-mails.
-   * @param temporaryUserCache        - temporary user cache for anonymous users
-   * @param logManager                - so that we can log events for users.
-   * @param userAuthenticationManager - for managing sessions, passwords and third-party provider links
-   * @param secondFactorManager       - for configuring 2FA
-   * @param userPreferenceManager     - Allows user preferences to be managed.
-   * @param schoolListReader          - to look up a users school.
+   * @param database                  an IUserDataManager that will support persistence.
+   * @param questionDb                allows this class to instruct the questionDB to merge an anonymous user with a
+   *                                  registered user.
+   * @param properties                A property loader
+   * @param providersToRegister       A map of known authentication providers.
+   * @param dtoMapper                 the preconfigured DO to DTO object mapper for user objects.
+   * @param emailQueue                the preconfigured communicator manager for sending e-mails.
+   * @param temporaryUserCache        temporary user cache for anonymous users
+   * @param logManager                so that we can log events for users.
+   * @param userAuthenticationManager for managing sessions, passwords and third-party provider links
+   * @param secondFactorManager       for configuring 2FA
+   * @param userPreferenceManager     Allows user preferences to be managed.
+   * @param schoolListReader          to look up a users school.
    */
   @Inject
   public UserAccountManager(final IUserDataManager database, final QuestionManager questionDb,
@@ -220,11 +222,11 @@ public class UserAccountManager implements IUserAccountManager {
    * Users who are already logged will be returned their UserDTO without going through the authentication
    * process.
    *
-   * @param request  - http request that we can attach the session to and save redirect url in.
-   * @param provider - the provider the user wishes to authenticate with.
+   * @param request  http request that we can attach the session to and save redirect url in.
+   * @param provider the provider the user wishes to authenticate with.
    * @return a URI for redirection
-   * @throws IOException                            -
-   * @throws AuthenticationProviderMappingException - as per exception description.
+   * @throws IOException                            if there is an error when contacting the OAuth server
+   * @throws AuthenticationProviderMappingException as per exception description.
    */
   public URI authenticate(final HttpServletRequest request, final String provider)
       throws IOException, AuthenticationProviderMappingException {
@@ -238,12 +240,12 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * Users must already be logged in to use this method otherwise a 401 will be returned.
    *
-   * @param request  - http request that we can attach the session to.
-   * @param provider - the provider the user wishes to authenticate with.
+   * @param request  http request that we can attach the session to.
+   * @param provider the provider the user wishes to authenticate with.
    * @return A redirection URI - also this endpoint ensures that the request has a session attribute on so we know
    *     that this is a link request not a new user.
-   * @throws IOException                            -
-   * @throws AuthenticationProviderMappingException - as per exception description.
+   * @throws IOException                            if there is an error when contacting the OAuth server
+   * @throws AuthenticationProviderMappingException as per exception description.
    */
   public URI initiateLinkAccountToUserFlow(final HttpServletRequest request, final String provider)
       throws IOException, AuthenticationProviderMappingException {
@@ -260,18 +262,18 @@ public class UserAccountManager implements IUserAccountManager {
    * This method will either register a new user and attach the linkedAccount or locate the existing account of the
    * user and create a session for that.
    *
-   * @param request  - http request from the user - should contain url encoded token details.
+   * @param request  http request from the user - should contain url encoded token details.
    * @param response to store the session in our own segue cookie.
-   * @param provider - the provider who has just authenticated the user.
+   * @param provider the provider who has just authenticated the user.
    * @return Response containing the user object. Alternatively a SegueErrorResponse could be returned.
-   * @throws AuthenticationProviderMappingException - if we cannot locate an appropriate authenticator.
-   * @throws SegueDatabaseException                 - if there is a local database error.
-   * @throws IOException                            - Problem reading something
-   * @throws NoUserException                        - If the user doesn't exist with the provider.
-   * @throws AuthenticatorSecurityException         - If there is a security probably with the authenticator.
-   * @throws CrossSiteRequestForgeryException       - as per exception description.
-   * @throws CodeExchangeException                  - as per exception description.
-   * @throws AuthenticationCodeException            - as per exception description.
+   * @throws AuthenticationProviderMappingException if we cannot locate an appropriate authenticator.
+   * @throws SegueDatabaseException                 if there is a local database error.
+   * @throws IOException                            Problem reading something
+   * @throws NoUserException                        If the user doesn't exist with the provider.
+   * @throws AuthenticatorSecurityException         If there is a security probably with the authenticator.
+   * @throws CrossSiteRequestForgeryException       as per exception description.
+   * @throws CodeExchangeException                  as per exception description.
+   * @throws AuthenticationCodeException            as per exception description.
    */
   public RegisteredUserDTO authenticateCallback(final HttpServletRequest request,
                                                 final HttpServletResponse response, final String provider)
@@ -312,8 +314,8 @@ public class UserAccountManager implements IUserAccountManager {
     } else {
       if (providerUserDO.getEmail() != null && !providerUserDO.getEmail().isEmpty()
           && this.findUserByEmail(providerUserDO.getEmail()) != null) {
-        log.warn("A user tried to use unknown provider '" + sanitiseExternalLogValue(capitalizeFully(provider))
-            + "' to log in to an account with matching email (" + providerUserDO.getEmail() + ").");
+        log.warn("A user tried to use unknown provider '{}' to log in to an account with matching email ({}).",
+            sanitiseExternalLogValue(capitalizeFully(provider)), providerUserDO.getEmail());
         throw new DuplicateAccountException("You do not use " + capitalizeFully(provider) + " to log on to Isaac."
             + " You may have registered using a different provider, or a username and password.");
       }
@@ -324,8 +326,7 @@ public class UserAccountManager implements IUserAccountManager {
       segueUserDTO.setFirstLogin(true);
 
       try {
-        ImmutableMap<String, Object> emailTokens = ImmutableMap.of("provider",
-            capitalizeFully(provider));
+        Map<String, Object> emailTokens = Map.of(EMAIL_TEMPLATE_TOKEN_PROVIDER, capitalizeFully(provider));
 
         emailManager.sendTemplatedEmailToUser(segueUserDTO,
             emailManager.getEmailTemplateDTO("email-template-registration-confirmation-federated"),
@@ -343,20 +344,20 @@ public class UserAccountManager implements IUserAccountManager {
    * This method will attempt to authenticate the user using the provided credentials and if successful will log the
    * user in and create a session.
    *
-   * @param request  - http request that we can attach the session to.
+   * @param request  http request that we can attach the session to.
    * @param response to store the session in our own segue cookie.
-   * @param provider - the provider the user wishes to authenticate with.
-   * @param email    - the email address of the account holder.
-   * @param password - the plain text password.
+   * @param provider the provider the user wishes to authenticate with.
+   * @param email    the email address of the account holder.
+   * @param password the plain text password.
    * @return A response containing the UserDTO object or a SegueErrorResponse.
-   * @throws AuthenticationProviderMappingException    - if we cannot find an authenticator
-   * @throws IncorrectCredentialsProvidedException     - if the password is incorrect
-   * @throws NoCredentialsAvailableException           - If the account exists but does not have a local password
-   * @throws AdditionalAuthenticationRequiredException - If the account has 2FA enabled and we need to initiate that
-   *                                                         flow
-   * @throws MFARequiredButNotConfiguredException      - If the account type requires 2FA to be configured but none is
-   *                                                         enabled for the account
-   * @throws SegueDatabaseException                    - if there is a problem with the database.
+   * @throws AuthenticationProviderMappingException    if we cannot find an authenticator
+   * @throws IncorrectCredentialsProvidedException     if the password is incorrect
+   * @throws NoCredentialsAvailableException           If the account exists but does not have a local password
+   * @throws AdditionalAuthenticationRequiredException If the account has 2FA enabled and we need to initiate that
+   *                                                   flow
+   * @throws MFARequiredButNotConfiguredException      If the account type requires 2FA to be configured but none is
+   *                                                   enabled for the account
+   * @throws SegueDatabaseException                    if there is a problem with the database.
    */
   public final RegisteredUserDTO authenticateWithCredentials(final HttpServletRequest request,
                                                              final HttpServletResponse response, final String provider,
@@ -393,36 +394,31 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Create a user object. This method allows new user objects to be created.
    *
-   * @param request                - so that we can identify the user
-   * @param response               to tell the browser to store the session in our own segue cookie.
-   * @param userObjectFromClient   - the new user object from the clients' perspective.
-   * @param newPassword            - the new password for the user.
-   * @param userPreferenceObject   - the new preferences for this user
-   * @param registeredUserContexts - a List of User Contexts (stage, exam board)
+   * @param request                so that we can identify the user
+   * @param userObjectFromClient   the new user object from the clients' perspective.
+   * @param newPassword            the new password for the user.
+   * @param userPreferenceObject   the new preferences for this user
+   * @param registeredUserContexts a List of User Contexts (stage, exam board)
    * @return the updated user object.
    */
-  public Response createUserObjectAndLogIn(final HttpServletRequest request, final HttpServletResponse response,
-                                           final RegisteredUser userObjectFromClient, final String newPassword,
-                                           final Map<String, Map<String, Boolean>> userPreferenceObject,
-                                           final List<UserContext> registeredUserContexts)
+  public Response createNewUser(final HttpServletRequest request, final RegisteredUser userObjectFromClient,
+                                final String newPassword,
+                                final Map<String, Map<String, Boolean>> userPreferenceObject,
+                                final List<UserContext> registeredUserContexts)
       throws InvalidKeySpecException, NoSuchAlgorithmException {
     try {
-      RegisteredUserDTO savedUser = this.createUserObjectAndSession(request, response,
-          userObjectFromClient, newPassword, registeredUserContexts);
+      RegisteredUserDTO savedUser =
+          this.createAndSaveUserObject(request, userObjectFromClient, newPassword, registeredUserContexts);
 
       if (userPreferenceObject != null) {
         List<UserPreference> userPreferences = userPreferenceObjectToList(userPreferenceObject, savedUser.getId());
         userPreferenceManager.saveUserPreferences(userPreferences);
       }
 
-      return Response.ok(savedUser).build();
+      return Response.ok().build();
     } catch (InvalidPasswordException e) {
       log.warn("Invalid password exception occurred during registration!");
       return new SegueErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()).toResponse();
-    } catch (FailedToHashPasswordException e) {
-      log.error("Failed to hash password during user registration!");
-      return new SegueErrorResponse(Response.Status.INTERNAL_SERVER_ERROR,
-          "Unable to set a password.").toResponse();
     } catch (MissingRequiredFieldException e) {
       log.warn("Missing field during update operation: {}", e.getMessage());
       return new SegueErrorResponse(Response.Status.BAD_REQUEST, "You are missing a required field. "
@@ -430,7 +426,10 @@ public class UserAccountManager implements IUserAccountManager {
     } catch (DuplicateAccountException e) {
       log.warn("Duplicate account registration attempt for ({})",
           sanitiseExternalLogValue(userObjectFromClient.getEmail()));
-      return new SegueErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()).toResponse();
+      sendRegistrationDuplicateEmail(userObjectFromClient.getEmail());
+      // For security reasons, an otherwise-valid request for existing account should return the same response as for
+      // a new one
+      return Response.ok().build();
     } catch (SegueDatabaseException e) {
       String errorMsg = "Unable to set a password, due to an internal database error.";
       log.error(errorMsg, e);
@@ -443,6 +442,9 @@ public class UserAccountManager implements IUserAccountManager {
     } catch (InvalidNameException e) {
       log.warn("Invalid name provided during registration.");
       return new SegueErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()).toResponse();
+    } catch (InvalidEmailException e) {
+      log.warn("Invalid email address provided during registration.");
+      return new SegueErrorResponse(Response.Status.BAD_REQUEST, e.getMessage()).toResponse();
     }
   }
 
@@ -450,8 +452,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Convert user-provided preference maps to UserPreference lists.
    *
-   * @param userPreferenceObject - the user-provided preference object
-   * @param userId               - the userId of the user
+   * @param userPreferenceObject the user-provided preference object
+   * @param userId               the userId of the user
    * @return whether the preference is valid
    */
   private List<UserPreference> userPreferenceObjectToList(final Map<String, Map<String, Boolean>> userPreferenceObject,
@@ -466,7 +468,7 @@ public class UserAccountManager implements IUserAccountManager {
       // Check if the given preference type is one we support:
       if (!EnumUtils.isValidEnum(uk.ac.cam.cl.dtg.isaac.api.Constants.IsaacUserPreferences.class, preferenceType)
           && !EnumUtils.isValidEnum(SegueUserPreferences.class, preferenceType)) {
-        log.warn("Unknown user preference type '" + sanitiseExternalLogValue(preferenceType) + "' provided. Skipping.");
+        log.warn("Unknown user preference type '{}' provided. Skipping.", sanitiseExternalLogValue(preferenceType));
         continue;
       }
 
@@ -476,8 +478,8 @@ public class UserAccountManager implements IUserAccountManager {
         for (String preferenceName : userPreferenceObject.get(preferenceType).keySet()) {
           if (!EnumUtils.isValidEnum(EmailType.class, preferenceName)
               || !EmailType.valueOf(preferenceName).isValidEmailPreference()) {
-            log.warn("Invalid email preference name '" + sanitiseExternalLogValue(preferenceName) + "' provided for '"
-                + sanitiseExternalLogValue(preferenceType) + "'! Skipping.");
+            log.warn("Invalid email preference name '{}' provided for '{}", sanitiseExternalLogValue(preferenceName),
+                sanitiseExternalLogValue(preferenceType));
             continue;
           }
           boolean preferenceValue = userPreferenceObject.get(preferenceType).get(preferenceName);
@@ -488,15 +490,15 @@ public class UserAccountManager implements IUserAccountManager {
         // Isaac user preference names are configured in the config files:
         String acceptedPreferenceNamesProperty = properties.getProperty(preferenceType);
         if (null == acceptedPreferenceNamesProperty) {
-          log.error("Failed to find allowed user preferences names for '" + sanitiseExternalLogValue(preferenceType)
-              + "'! Has it been configured?");
+          log.error("Failed to find allowed user preferences names for '{}'! Has it been configured?",
+              sanitiseExternalLogValue(preferenceType));
           acceptedPreferenceNamesProperty = "";
         }
         List<String> acceptedPreferenceNames = Arrays.asList(acceptedPreferenceNamesProperty.split(","));
         for (String preferenceName : userPreferenceObject.get(preferenceType).keySet()) {
           if (!acceptedPreferenceNames.contains(preferenceName)) {
-            log.warn("Invalid user preference name '" + sanitiseExternalLogValue(preferenceName)
-                + "' provided for type '" + sanitiseExternalLogValue(preferenceType) + "'! Skipping.");
+            log.warn("Invalid user preference name '{}' provided for type '{}'! Skipping.",
+                sanitiseExternalLogValue(preferenceName), sanitiseExternalLogValue(preferenceType));
             continue;
           }
           boolean preferenceValue = userPreferenceObject.get(preferenceType).get(preferenceName);
@@ -504,7 +506,7 @@ public class UserAccountManager implements IUserAccountManager {
         }
       } else {
         log.warn(
-            "Unexpected user preference type '" + sanitiseExternalLogValue(preferenceType) + "' provided. Skipping.");
+            "Unexpected user preference type '{}' provided. Skipping.", sanitiseExternalLogValue(preferenceType));
       }
     }
     return userPreferences;
@@ -515,17 +517,17 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * This method does all of the necessary security checks to determine who is allowed to edit what.
    *
-   * @param request                - so that we can identify the user
-   * @param userObjectFromClient   - the new user object from the clients' perspective.
-   * @param passwordCurrent        - the current password, used if the password has changed
-   * @param newPassword            - the new password, used if the password has changed
-   * @param userPreferenceObject   - the preferences for this user
-   * @param registeredUserContexts - a List of User Contexts (stage, exam board)
+   * @param request                so that we can identify the user
+   * @param userObjectFromClient   the new user object from the clients' perspective.
+   * @param passwordCurrent        the current password, used if the password has changed
+   * @param newPassword            the new password, used if the password has changed
+   * @param userPreferenceObject   the preferences for this user
+   * @param registeredUserContexts a List of User Contexts (stage, exam board)
    * @return the updated user object.
-   * @throws IncorrectCredentialsProvidedException - if the password is incorrect
-   * @throws NoCredentialsAvailableException       - if the account exists but does not have a local password
-   * @throws InvalidKeySpecException               - if the preconfigured key spec is invalid
-   * @throws NoSuchAlgorithmException              - if the configured algorithm is not valid
+   * @throws IncorrectCredentialsProvidedException if the password is incorrect
+   * @throws NoCredentialsAvailableException       if the account exists but does not have a local password
+   * @throws InvalidKeySpecException               if the preconfigured key spec is invalid
+   * @throws NoSuchAlgorithmException              if the configured algorithm is not valid
    */
   public Response updateUserObject(final HttpServletRequest request,
                                    final RegisteredUser userObjectFromClient, final String passwordCurrent,
@@ -656,16 +658,16 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Method to update a user object in our database.
    *
-   * @param updatedUser - the user to update - must contain a user id
-   * @param newPassword - the new password if being changed.
+   * @param updatedUser the user to update - must contain a user id
+   * @param newPassword the new password if being changed.
    * @return the user object as was saved.
-   * @throws InvalidPasswordException      - the password provided does not meet our requirements.
-   * @throws MissingRequiredFieldException - A required field is missing for the user object so cannot be saved.
-   * @throws SegueDatabaseException        - If there is an internal database error.
+   * @throws InvalidPasswordException      the password provided does not meet our requirements.
+   * @throws MissingRequiredFieldException A required field is missing for the user object so cannot be saved.
+   * @throws SegueDatabaseException        If there is an internal database error.
    */
   public RegisteredUserDTO updateUserObject(final RegisteredUser updatedUser, final String newPassword)
       throws InvalidPasswordException, MissingRequiredFieldException, SegueDatabaseException,
-      InvalidKeySpecException, NoSuchAlgorithmException, InvalidNameException {
+      InvalidKeySpecException, NoSuchAlgorithmException, InvalidNameException, NoUserException {
     requireNonNull(updatedUser.getId());
 
     // We want to map to DTO first to make sure that the user cannot
@@ -678,31 +680,32 @@ public class UserAccountManager implements IUserAccountManager {
 
     // This is an update operation.
     final RegisteredUser existingUser = this.findUserById(updatedUser.getId());
-    // userToSave = existingUser;
-
-    // Check that the user isn't trying to take an existing users e-mail.
-    if (this.findUserByEmail(updatedUser.getEmail()) != null && !existingUser.getEmail()
-        .equals(updatedUser.getEmail())) {
-      throw new DuplicateAccountException("An account with that e-mail address already exists.");
-    }
-
-    // validate names
-    if (!isUserNameValid(updatedUser.getGivenName())) {
-      throw new InvalidNameException("The given name provided is an invalid length or contains forbidden characters.");
-    }
-
-    if (!isUserNameValid(updatedUser.getFamilyName())) {
-      throw new InvalidNameException("The family name provided is an invalid length or contains forbidden characters.");
+    if (existingUser == null) {
+      throw new NoUserException("User to be updated could not be found.");
     }
 
     IPasswordAuthenticator authenticator = (IPasswordAuthenticator) this.registeredAuthProviders
         .get(AuthenticationProvider.SEGUE);
 
-    // Check if there is a new password and it is invalid as early as possible:
+    validateUpdatingUserDetails(updatedUser, newPassword, existingUser, authenticator);
+
+    RegisteredUser userToSave =
+        constructUpdatedUserObject(updatedUser, userDTOContainingUpdates, existingUser, authenticator);
+
+    // save the user
+    RegisteredUser userToReturn = this.database.createOrUpdateUser(userToSave);
     if (null != newPassword && !newPassword.isEmpty()) {
-      authenticator.ensureValidPassword(newPassword);
+      authenticator.setOrChangeUsersPassword(userToReturn, newPassword);
     }
 
+    // return it to the caller
+    return this.convertUserDOToUserDTO(userToReturn);
+  }
+
+  private RegisteredUser constructUpdatedUserObject(RegisteredUser updatedUser,
+                                                    RegisteredUserDTO userDTOContainingUpdates,
+                                                    RegisteredUser existingUser, IPasswordAuthenticator authenticator)
+      throws MissingRequiredFieldException, SegueDatabaseException {
     RegisteredUser userToSave = dtoMapper.copy(existingUser);
     dtoMapper.merge(userDTOContainingUpdates, userToSave);
     // Don't modify email verification status, registration date, or role
@@ -729,7 +732,7 @@ public class UserAccountManager implements IUserAccountManager {
     // Doing this before the email change code is necessary to ensure that (a) users cannot try and change to an
     // invalid email, and (b) that users with an invalid email can change their email to a valid one!
     if (!this.isUserValid(userToSave)) {
-      throw new MissingRequiredFieldException("The email address provided is invalid.");
+      throw new MissingRequiredFieldException(EXCEPTION_MESSAGE_INVALID_EMAIL);
     }
 
     // Make sure the email address is preserved (can't be changed until new email is verified)
@@ -749,30 +752,46 @@ public class UserAccountManager implements IUserAccountManager {
 
       userToSave.setEmail(existingUser.getEmail());
     }
+    return userToSave;
+  }
 
-    // save the user
-    RegisteredUser userToReturn = this.database.createOrUpdateUser(userToSave);
-    if (null != newPassword && !newPassword.isEmpty()) {
-      authenticator.setOrChangeUsersPassword(userToReturn, newPassword);
+  private void validateUpdatingUserDetails(RegisteredUser updatedUser, String newPassword, RegisteredUser existingUser,
+                         IPasswordAuthenticator authenticator)
+      throws SegueDatabaseException, InvalidNameException, InvalidPasswordException {
+    // Check that the user isn't trying to take an existing users e-mail.
+    if (this.findUserByEmail(updatedUser.getEmail()) != null && !existingUser.getEmail()
+        .equals(updatedUser.getEmail())) {
+      throw new DuplicateAccountException("An account with that e-mail address already exists.");
     }
 
-    // return it to the caller
-    return this.convertUserDOToUserDTO(userToReturn);
+    // validate names
+    if (!isUserNameValid(updatedUser.getGivenName())) {
+      throw new InvalidNameException("The given name provided is an invalid length or contains forbidden characters.");
+    }
+
+    if (!isUserNameValid(updatedUser.getFamilyName())) {
+      throw new InvalidNameException("The family name provided is an invalid length or contains forbidden characters.");
+    }
+
+    // Check if there is a new password and it is invalid as early as possible:
+    if (null != newPassword && !newPassword.isEmpty()) {
+      authenticator.ensureValidPassword(newPassword);
+    }
   }
 
   /**
    * Complete the MFA login process. If the correct TOTPCode is provided we will give the user a full session cookie
    * rather than a partial one.
    *
-   * @param request  - containing the partially logged-in user.
-   * @param response - response will be updated to include fully logged in cookie if TOTPCode is successfully verified
-   * @param totpCode - code to verify
+   * @param request  containing the partially logged-in user.
+   * @param response response will be updated to include fully logged in cookie if TOTPCode is successfully verified
+   * @param totpCode code to verify
    * @return RegisteredUserDTO as they are now considered logged in.
-   * @throws IncorrectCredentialsProvidedException - if the password is incorrect
-   * @throws NoCredentialsAvailableException       - If the account exists but does not have a local password
-   * @throws NoUserLoggedInException               - If the user hasn't completed the first step of the authentication
-   *                                                     process.
-   * @throws SegueDatabaseException                - if there is a problem with the database.
+   * @throws IncorrectCredentialsProvidedException if the password is incorrect
+   * @throws NoCredentialsAvailableException       If the account exists but does not have a local password
+   * @throws NoUserLoggedInException               If the user hasn't completed the first step of the authentication
+   *                                               process.
+   * @throws SegueDatabaseException                if there is a problem with the database.
    */
   public RegisteredUserDTO authenticateMFA(final HttpServletRequest request, final HttpServletResponse response,
                                            final Integer totpCode)
@@ -795,14 +814,14 @@ public class UserAccountManager implements IUserAccountManager {
    * Utility method to ensure that the credentials provided are the current correct ones. If they are invalid an
    * exception will be thrown otherwise nothing will happen.
    *
-   * @param provider - the password provider who will validate the credentials.
-   * @param email    - the email address of the account holder.
-   * @param password - the plain text password.
-   * @throws AuthenticationProviderMappingException - if we cannot find an authenticator
-   * @throws IncorrectCredentialsProvidedException  - if the password is incorrect
-   * @throws NoUserException                        - if the user does not exist
-   * @throws NoCredentialsAvailableException        - If the account exists but does not have a local password
-   * @throws SegueDatabaseException                 - if there is a problem with the database.
+   * @param provider the password provider who will validate the credentials.
+   * @param email    the email address of the account holder.
+   * @param password the plain text password.
+   * @throws AuthenticationProviderMappingException if we cannot find an authenticator
+   * @throws IncorrectCredentialsProvidedException  if the password is incorrect
+   * @throws NoUserException                        if the user does not exist
+   * @throws NoCredentialsAvailableException        If the account exists but does not have a local password
+   * @throws SegueDatabaseException                 if there is a problem with the database.
    */
   public void ensureCorrectPassword(final String provider, final String email, final String password)
       throws AuthenticationProviderMappingException, IncorrectCredentialsProvidedException, NoUserException,
@@ -818,12 +837,12 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * Removes the link between a user and a provider.
    *
-   * @param user           - user to affect.
-   * @param providerString - provider to unassociated.
-   * @throws SegueDatabaseException                 - if there is an error during the database update.
-   * @throws MissingRequiredFieldException          - If the change will mean that the user will be unable to login
-   *                                                      again.
-   * @throws AuthenticationProviderMappingException - if we are unable to locate the authentication provider specified.
+   * @param user           user to affect.
+   * @param providerString provider to unassociated.
+   * @throws SegueDatabaseException                 if there is an error during the database update.
+   * @throws MissingRequiredFieldException          If the change will mean that the user will be unable to login
+   *                                                again.
+   * @throws AuthenticationProviderMappingException if we are unable to locate the authentication provider specified.
    */
   public void unlinkUserFromProvider(final RegisteredUserDTO user, final String providerString)
       throws SegueDatabaseException, MissingRequiredFieldException, AuthenticationProviderMappingException {
@@ -834,10 +853,10 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * CheckUserRole matches a list of valid roles.
    *
-   * @param request    - http request so that we can get current users details.
-   * @param validRoles - a Collection of roles that we would want the user to match.
+   * @param request    http request so that we can get current users details.
+   * @param validRoles a Collection of roles that we would want the user to match.
    * @return true if the user is a member of one of the roles in our valid roles list. False if not.
-   * @throws NoUserLoggedInException - if there is no registered user logged in.
+   * @throws NoUserLoggedInException if there is no registered user logged in.
    */
   public final boolean checkUserRole(final HttpServletRequest request, final Collection<Role> validRoles)
       throws NoUserLoggedInException {
@@ -849,10 +868,10 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * CheckUserRole matches a list of valid roles.
    *
-   * @param user       - the users details.
-   * @param validRoles - a Collection of roles that we would want the user to match.
+   * @param user       the users details.
+   * @param validRoles a Collection of roles that we would want the user to match.
    * @return true if the user is a member of one of the roles in our valid roles list. False if not.
-   * @throws NoUserLoggedInException - if there is no registered user logged in.
+   * @throws NoUserLoggedInException if there is no registered user logged in.
    */
   public boolean checkUserRole(final RegisteredUserDTO user, final Collection<Role> validRoles)
       throws NoUserLoggedInException {
@@ -872,7 +891,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Determine if there is a user logged in with a valid session.
    *
-   * @param request - to retrieve session information from
+   * @param request to retrieve session information from
    * @return True if the user is logged in and the session is valid, false if not.
    */
   public final boolean isRegisteredUserLoggedIn(final HttpServletRequest request) {
@@ -888,10 +907,10 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * This method will validate the session and will throw a NoUserLoggedInException if invalid.
    *
-   * @param request - to retrieve session information from
+   * @param request to retrieve session information from
    * @return Returns the current UserDTO if we can get it or throw a NoUserLoggedInException
    *         if user is not currently logged in
-   * @throws NoUserLoggedInException - When the session has expired or there is no user currently logged in.
+   * @throws NoUserLoggedInException When the session has expired or there is no user currently logged in.
    */
   public RegisteredUserDTO getCurrentRegisteredUser(final HttpServletRequest request)
       throws NoUserLoggedInException {
@@ -927,9 +946,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Get the authentication settings of particular user.
    *
-   * @param user - to retrieve settings from
+   * @param user to retrieve settings from
    * @return Returns the current UserDTO if we can get it or null if user is not currently logged in
-   * @throws SegueDatabaseException - If there is an internal database error
+   * @throws SegueDatabaseException If there is an internal database error
    */
   public final UserAuthenticationSettingsDTO getUsersAuthenticationSettings(final RegisteredUserDTO user)
       throws SegueDatabaseException {
@@ -946,9 +965,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Find a list of users based on some user prototype.
    *
-   * @param prototype - partially completed user object to base search on
+   * @param prototype partially completed user object to base search on
    * @return list of registered user dtos.
-   * @throws SegueDatabaseException - if there is a database error.
+   * @throws SegueDatabaseException if there is a database error.
    */
   public List<RegisteredUserDTO> findUsers(final RegisteredUserDTO prototype) throws SegueDatabaseException {
     List<RegisteredUser> registeredUsersDOs = this.database.findUsers(this.dtoMapper.map(prototype));
@@ -959,9 +978,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Find a list of users based on a List of user ids.
    *
-   * @param userIds - partially completed user object to base search on
+   * @param userIds partially completed user object to base search on
    * @return list of registered user dtos.
-   * @throws SegueDatabaseException - if there is a database error.
+   * @throws SegueDatabaseException if there is a database error.
    */
   public List<RegisteredUserDTO> findUsers(final Collection<Long> userIds) throws SegueDatabaseException {
     requireNonNull(userIds);
@@ -977,10 +996,10 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This function can be used to find user information about a user when given an id.
    *
-   * @param id - the id of the user to search for.
+   * @param id the id of the user to search for.
    * @return the userDTO
-   * @throws NoUserException        - If we cannot find a valid user with the email address provided.
-   * @throws SegueDatabaseException - If there is another database error
+   * @throws NoUserException        If we cannot find a valid user with the email address provided.
+   * @throws SegueDatabaseException If there is another database error
    */
   @Override
   public RegisteredUserDTO getUserDTOById(final Long id) throws NoUserException, SegueDatabaseException {
@@ -992,11 +1011,11 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * WARNING - Do not expect complete RegisteredUser Objects as data may be missing if you include deleted users
    *
-   * @param id             - the id of the user to search for.
-   * @param includeDeleted - include deleted users in results - true for yes false for no
+   * @param id             the id of the user to search for.
+   * @param includeDeleted include deleted users in results - true for yes false for no
    * @return the userDTO
-   * @throws NoUserException        - If we cannot find a valid user with the email address provided.
-   * @throws SegueDatabaseException - If there is another database error
+   * @throws NoUserException        If we cannot find a valid user with the email address provided.
+   * @throws SegueDatabaseException If there is another database error
    */
   @Override
   public RegisteredUserDTO getUserDTOById(final Long id, final boolean includeDeleted) throws NoUserException,
@@ -1017,10 +1036,10 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This function can be used to find user information about a user when given an email.
    *
-   * @param email - the e-mail address of the user to search for
+   * @param email the e-mail address of the user to search for
    * @return the userDTO
-   * @throws NoUserException        - If we cannot find a valid user with the email address provided.
-   * @throws SegueDatabaseException - If there is another database error
+   * @throws NoUserException        If we cannot find a valid user with the email address provided.
+   * @throws SegueDatabaseException If there is another database error
    */
   public final RegisteredUserDTO getUserDTOByEmail(final String email) throws NoUserException,
       SegueDatabaseException {
@@ -1039,8 +1058,8 @@ public class UserAccountManager implements IUserAccountManager {
    * If the user is currently logged in you will get a RegisteredUserDTO otherwise you will get an AnonymousUserDTO
    * containing a sessionIdentifier and any questionAttempts made by the anonymous user.
    *
-   * @param request - containing session information.
-   * @return AbstractSegueUserDTO - Either a RegisteredUser or an AnonymousUser
+   * @param request containing session information.
+   * @return AbstractSegueUserDTO Either a RegisteredUser or an AnonymousUser
    */
   public AbstractSegueUserDTO getCurrentUser(final HttpServletRequest request) throws SegueDatabaseException {
     try {
@@ -1068,42 +1087,34 @@ public class UserAccountManager implements IUserAccountManager {
    * Note: this method is intended for creation of accounts in segue - not for linked account registration.
    *
    * @param request                to enable access to anonymous user information.
-   * @param response               to store the session in our own segue cookie.
-   * @param user                   - the user DO to use for updates - must not contain a user id.
-   * @param newPassword            - new password for the account being created.
-   * @param registeredUserContexts - a List of User Contexts (stage, exam board)
+   * @param user                   the user DO to use for updates - must not contain a user id.
+   * @param newPassword            new password for the account being created.
+   * @param registeredUserContexts a List of User Contexts (stage, exam board)
    * @return the user object as was saved.
-   * @throws InvalidPasswordException      - the password provided does not meet our requirements.
-   * @throws MissingRequiredFieldException - A required field is missing for the user object so cannot be saved.
-   * @throws SegueDatabaseException        - If there is an internal database error.
-   * @throws EmailMustBeVerifiedException  - if a user attempts to sign up with an email that must be verified before it
-   *                                             can be used (i.e. an @isaaccomputerscience.org address).
+   * @throws InvalidPasswordException      the password provided does not meet our requirements.
+   * @throws MissingRequiredFieldException A required field is missing for the user object so cannot be saved.
+   * @throws SegueDatabaseException        If there is an internal database error.
+   * @throws EmailMustBeVerifiedException  if a user attempts to sign up with an email that must be verified before it
+   *                                       can be used (i.e. an @isaaccomputerscience.org address).
    */
-  public RegisteredUserDTO createUserObjectAndSession(
-      final HttpServletRequest request, final HttpServletResponse response, final RegisteredUser user,
-      final String newPassword, final List<UserContext> registeredUserContexts) throws InvalidPasswordException,
-      MissingRequiredFieldException, SegueDatabaseException,
-      EmailMustBeVerifiedException, InvalidKeySpecException, NoSuchAlgorithmException, InvalidNameException {
-    Validate.isTrue(user.getId() == null,
-        "When creating a new user the user id must not be set.");
+  public RegisteredUserDTO createAndSaveUserObject(
+      final HttpServletRequest request, final RegisteredUser user, final String newPassword,
+      final List<UserContext> registeredUserContexts)
+      throws InvalidPasswordException, MissingRequiredFieldException, SegueDatabaseException,
+      EmailMustBeVerifiedException, InvalidKeySpecException, NoSuchAlgorithmException, InvalidNameException,
+      InvalidEmailException {
+    Validate.isTrue(user.getId() == null, "When creating a new user the user id must not be set.");
 
     // Ensure nobody registers with Isaac email addresses. Users can change emails to restricted ones by verifying them,
     // however.
     if (null != restrictedSignupEmailRegex && restrictedSignupEmailRegex.matcher(user.getEmail()).find()) {
-      log.warn(
-          "User attempted to register with Isaac email address '" + sanitiseExternalLogValue(user.getEmail()) + "'!");
+      log.warn("User attempted to register with Isaac email address '{}'!", sanitiseExternalLogValue(user.getEmail()));
       throw new EmailMustBeVerifiedException("You cannot register with an Isaac email address.");
     }
 
-    RegisteredUser userToSave;
-    UserMapper mapper = this.dtoMapper;
-
-    // We want to map to DTO first to make sure that the user cannot
-    // change fields that aren't exposed to them
-    RegisteredUserDTO userDtoForNewUser = mapper.map(user);
-
-    // This is a new registration
-    userToSave = mapper.map(userDtoForNewUser);
+    // We want to map to DTO first to make sure that the user cannot change fields that aren't exposed to them
+    RegisteredUserDTO userDtoForNewUser = this.dtoMapper.map(user);
+    RegisteredUser userToSave = this.dtoMapper.map(userDtoForNewUser);
 
     // Set defaults
     userToSave.setRole(Role.STUDENT);
@@ -1121,7 +1132,41 @@ public class UserAccountManager implements IUserAccountManager {
       userToSave.setTeacherPending(false);
     }
 
-    // Before save we should validate the user for mandatory fields.
+    IPasswordAuthenticator authenticator = (IPasswordAuthenticator) this.registeredAuthProviders
+        .get(AuthenticationProvider.SEGUE);
+
+    // Before saving, we should validate the user for mandatory fields
+    validateNewUserDetails(user, newPassword, userToSave, authenticator);
+
+    // Generate email verification token and add to user object
+    authenticator.createEmailVerificationTokenForUser(userToSave, userToSave.getEmail());
+
+    // save the user object to database and generate the new userId
+    RegisteredUser userToReturn = this.database.createOrUpdateUser(userToSave);
+
+    // Create password for the user (adds directly to credentials table)
+    authenticator.setOrChangeUsersPassword(userToReturn, newPassword);
+
+    // Send a confirmation email, including the verification token
+    sendRegistrationConfirmationEmail(userToReturn);
+
+    logManager.logEvent(this.convertUserDOToUserDTO(userToReturn), request, SegueServerLogType.USER_REGISTRATION,
+        ImmutableMap.builder().put("provider", AuthenticationProvider.SEGUE.name()).build());
+
+    // return it to the caller.
+    return this.dtoMapper.map(userToReturn);
+  }
+
+  private void validateNewUserDetails(RegisteredUser user, String newPassword, RegisteredUser userToSave,
+                                      IPasswordAuthenticator authenticator)
+      throws InvalidNameException, InvalidPasswordException, MissingRequiredFieldException, SegueDatabaseException,
+      InvalidEmailException {
+    if (user.getGivenName() == null || user.getGivenName().isEmpty() || user.getFamilyName() == null
+        || user.getFamilyName().isEmpty() || user.getEmail() == null || user.getEmail().isEmpty() || newPassword == null
+        || newPassword.isEmpty()) {
+      throw new MissingRequiredFieldException("One or more required fields are missing.");
+    }
+
     // validate names
     if (!isUserNameValid(user.getGivenName())) {
       throw new InvalidNameException("The given name provided is an invalid length or contains forbidden characters.");
@@ -1131,34 +1176,24 @@ public class UserAccountManager implements IUserAccountManager {
       throw new InvalidNameException("The family name provided is an invalid length or contains forbidden characters.");
     }
 
-    IPasswordAuthenticator authenticator = (IPasswordAuthenticator) this.registeredAuthProviders
-        .get(AuthenticationProvider.SEGUE);
-
     // FIXME: Before creating the user object, ensure password is valid. This should really be in a transaction.
     authenticator.ensureValidPassword(newPassword);
 
     // Validate email address and check for existing accounts last to help mitigate enumeration attacks
     if (!this.isUserValid(userToSave)) {
-      throw new MissingRequiredFieldException("The email address provided is invalid.");
+      throw new InvalidEmailException(EXCEPTION_MESSAGE_INVALID_EMAIL);
     }
 
     if (this.findUserByEmail(user.getEmail()) != null) {
-      throw new DuplicateAccountException("The email address provided is invalid.");
+      throw new DuplicateAccountException(EXCEPTION_MESSAGE_INVALID_EMAIL);
     }
+  }
 
-    authenticator.createEmailVerificationTokenForUser(userToSave, userToSave.getEmail());
-
-    // save the user to get the userId
-    RegisteredUser userToReturn = this.database.createOrUpdateUser(userToSave);
-
-    // create password for the user
-    authenticator.setOrChangeUsersPassword(userToReturn, newPassword);
-
-    // send an email confirmation and set up verification
+  private void sendRegistrationConfirmationEmail(RegisteredUser userToReturn) throws SegueDatabaseException {
     try {
       RegisteredUserDTO userToReturnDTO = this.getUserDTOById(userToReturn.getId());
 
-      ImmutableMap<String, Object> emailTokens = ImmutableMap.of("verificationURL",
+      Map<String, Object> emailTokens = Map.of("verificationURL",
           generateEmailVerificationURL(userToReturnDTO, userToReturn.getEmailVerificationToken()));
 
       emailManager.sendTemplatedEmailToUser(userToReturnDTO,
@@ -1170,22 +1205,42 @@ public class UserAccountManager implements IUserAccountManager {
     } catch (NoUserException e) {
       log.error("Registration email could not be sent due to not being able to locate the user: {}", e.getMessage());
     }
+  }
 
-    // save the user again with updated token
-    //TODO: do we need this?
-    userToReturn = this.database.createOrUpdateUser(userToReturn);
+  private void sendRegistrationDuplicateEmail(String targetUserEmail) {
+    try {
+      RegisteredUserDTO existingUser = this.getUserDTOByEmail(targetUserEmail);
 
-    logManager.logEvent(this.convertUserDOToUserDTO(userToReturn), request, SegueServerLogType.USER_REGISTRATION,
-        ImmutableMap.builder().put("provider", AuthenticationProvider.SEGUE.name()).build());
+      Map<String, Object> emailTokens = Map.of(
+          "givenName", existingUser.getGivenName(),
+          "email", existingUser.getEmail(),
+          "siteBaseURL", String.format("https://%s", properties.getProperty(HOST_NAME)),
+          "contactUsURL", String.format("https://%s/contact", properties.getProperty(HOST_NAME)),
+          "sig", properties.getProperty(EMAIL_SIGNATURE)
+      );
 
-    // return it to the caller.
-    return this.logUserIn(request, response, userToReturn);
+      emailManager.sendTemplatedEmailToUser(existingUser,
+          emailManager.getEmailTemplateDTO("email-template-registration-duplicate"),
+          emailTokens, EmailType.SYSTEM);
+
+    } catch (ContentManagerException e) {
+      log.error("Duplicate registration email could not be sent due to content issue: {}", e.getMessage());
+    } catch (NoUserException e) {
+      log.error("Duplicate registration email could not be sent due to not being able to locate the user: {}",
+          e.getMessage());
+    } catch (SegueDatabaseException e) {
+      log.error("Duplicate registration email could not be sent due to an error while constructing the email: {}",
+          e.getMessage());
+    }
   }
 
   /**
-   * @param id            - the user id
-   * @param requestedRole - the new role
-   * @throws SegueDatabaseException - an exception when accessing the database
+   * Updates the role for the user matching to the provided id to the specified role.
+   * Also resets the teacherPending flag to false and sends the appropriate role change notification email to the user.
+   *
+   * @param id            the user id
+   * @param requestedRole the new role
+   * @throws SegueDatabaseException an exception when accessing the database
    */
   public void updateUserRole(final Long id, final Role requestedRole) throws SegueDatabaseException, NoUserException {
     requireNonNull(requestedRole);
@@ -1199,21 +1254,14 @@ public class UserAccountManager implements IUserAccountManager {
     try {
       RegisteredUserDTO existingUserDTO = this.getUserDTOById(id);
       if (userToSave.getRole() != requestedRole) {
-        String emailTemplate;
-        switch (requestedRole) {
-          case TUTOR:
-            emailTemplate = "email-template-tutor-welcome";
-            break;
-          case TEACHER:
-            emailTemplate = "email-template-teacher-welcome";
-            break;
-          default:
-            emailTemplate = "email-template-default-role-change";
-        }
+        String emailTemplate = switch (requestedRole) {
+          case TUTOR -> "email-template-tutor-welcome";
+          case TEACHER -> "email-template-teacher-welcome";
+          default -> "email-template-default-role-change";
+        };
         emailManager.sendTemplatedEmailToUser(existingUserDTO,
             emailManager.getEmailTemplateDTO(emailTemplate),
-            ImmutableMap.of("oldrole", existingUserDTO.getRole().toString(),
-                "newrole", requestedRole.toString()),
+            Map.of("oldrole", existingUserDTO.getRole().toString(), "newrole", requestedRole.toString()),
             EmailType.SYSTEM);
       }
     } catch (ContentManagerException | NoUserException e) {
@@ -1226,9 +1274,12 @@ public class UserAccountManager implements IUserAccountManager {
   }
 
   /**
-   * @param email                            - the user email
-   * @param requestedEmailVerificationStatus - the new email verification status
-   * @throws SegueDatabaseException - an exception when accessing the database
+   * Find the user associated with the provided email address and update their email verification status to the
+   * specified value.
+   *
+   * @param email                            the user email
+   * @param requestedEmailVerificationStatus the new email verification status
+   * @throws SegueDatabaseException an exception when accessing the database
    */
   public void updateUserEmailVerificationStatus(final String email,
                                                 final EmailVerificationStatus requestedEmailVerificationStatus)
@@ -1236,9 +1287,8 @@ public class UserAccountManager implements IUserAccountManager {
     requireNonNull(requestedEmailVerificationStatus);
     RegisteredUser userToSave = this.findUserByEmail(email);
     if (null == userToSave) {
-      log.warn(String.format(
-          "Could not update email verification status of email address (%s) - does not exist",
-          sanitiseExternalLogValue(email)));
+      log.warn("Could not update email verification status of email address ({}) - does not exist",
+          sanitiseExternalLogValue(email));
       return;
     }
     userToSave.setEmailVerificationStatus(requestedEmailVerificationStatus);
@@ -1249,9 +1299,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This method facilitates the removal of personal user data from Segue.
    *
-   * @param userToDelete - the user to delete.
-   * @throws SegueDatabaseException - if a general database error has occurred.
-   * @throws NoUserException        - if we cannot find the user account specified
+   * @param userToDelete the user to delete.
+   * @throws SegueDatabaseException if a general database error has occurred.
+   * @throws NoUserException        if we cannot find the user account specified
    */
   public void deleteUserAccount(final RegisteredUserDTO userToDelete) throws NoUserException, SegueDatabaseException {
     // check the user exists
@@ -1268,8 +1318,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This method facilitates the merging of two user accounts.
    *
-   * @param target - the user account to remove.
-   * @param source - the user account to merge into.
+   * @param target the user account to remove.
+   * @param source the user account to merge into.
    * @throws SegueDatabaseException if an error occurs
    */
   public void mergeUserAccounts(final RegisteredUserDTO target, final RegisteredUserDTO source)
@@ -1292,9 +1342,9 @@ public class UserAccountManager implements IUserAccountManager {
    * This method will use an email address to check a local user exists and if so, will send an email with a unique
    * token to allow a password reset. This method does not indicate whether or not the email actually existed.
    *
-   * @param userObject - A user object containing the email address of the user to reset the password for.
+   * @param userObject A user object containing the email address of the user to reset the password for.
    * @return true if the request was successfully submitted or false if the user was not found
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   public final boolean resetPasswordRequest(final RegisteredUserDTO userObject)
       throws SegueDatabaseException {
@@ -1322,9 +1372,9 @@ public class UserAccountManager implements IUserAccountManager {
    * This method will use an email address to check a local user exists and if so, will send an email with a unique
    * token to allow a password reset. This method does not indicate whether or not the email actually existed.
    *
-   * @param request - so we can look up the registered user object.
-   * @param email   - The email the user wants to verify.
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @param request so we can look up the registered user object.
+   * @param email   The email the user wants to verify.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   public final void emailVerificationRequest(final HttpServletRequest request, final String email)
       throws SegueDatabaseException {
@@ -1362,9 +1412,9 @@ public class UserAccountManager implements IUserAccountManager {
    * This method will test if the specified token is a valid password reset token.
    * <br>
    *
-   * @param token - The token to test
+   * @param token The token to test
    * @return true if the reset token is valid
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   public final boolean validatePasswordResetToken(final String token) throws SegueDatabaseException {
     // Set user's password
@@ -1377,12 +1427,12 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * processEmailVerification.
    *
-   * @param userId - the user id
-   * @param token  - token used to verify email address
-   * @return - whether the token is valid or not
-   * @throws SegueDatabaseException - exception if token cannot be validated
-   * @throws InvalidTokenException  - if something is wrong with the token provided
-   * @throws NoUserException        - if the user does not exist.
+   * @param userId the user id
+   * @param token  token used to verify email address
+   * @return whether the token is valid or not
+   * @throws SegueDatabaseException exception if token cannot be validated
+   * @throws InvalidTokenException  if something is wrong with the token provided
+   * @throws NoUserException        if the user does not exist.
    */
   public RegisteredUserDTO processEmailVerification(final Long userId, final String token)
       throws SegueDatabaseException, InvalidTokenException, NoUserException {
@@ -1428,12 +1478,12 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This method will use a unique password reset token to set a new password.
    *
-   * @param token       - the password reset token
-   * @param newPassword - the supplied password
+   * @param token       the password reset token
+   * @param newPassword the supplied password
    * @return the user which has had the password reset.
-   * @throws InvalidTokenException    - If the token provided is invalid.
-   * @throws InvalidPasswordException - If the password provided is invalid.
-   * @throws SegueDatabaseException   - If there is an internal database error.
+   * @throws InvalidTokenException    If the token provided is invalid.
+   * @throws InvalidPasswordException If the password provided is invalid.
+   * @throws SegueDatabaseException   If there is an internal database error.
    */
   public RegisteredUserDTO resetPassword(final String token, final String newPassword)
       throws InvalidTokenException, InvalidPasswordException, SegueDatabaseException, InvalidKeySpecException,
@@ -1444,9 +1494,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Check if account has MFA configured.
    *
-   * @param user - who requested it
+   * @param user who requested it
    * @return true if yes, false if not.
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   public boolean has2FAConfigured(final RegisteredUserDTO user) throws SegueDatabaseException {
     return this.secondFactorManager.has2FAConfigured(user);
@@ -1455,7 +1505,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Generate a random shared secret - currently not stored against the users account.
    *
-   * @param user - who requested it
+   * @param user who requested it
    * @return TOTPSharedSecret object
    */
   public TOTPSharedSecret getNewSharedSecret(final RegisteredUserDTO user) {
@@ -1465,11 +1515,11 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Activate MFA for user's account by passing secret and code submitted.
    *
-   * @param user          - registered user
-   * @param sharedSecret  - shared secret provided by getNewSharedSecret call
-   * @param codeSubmitted - latest TOTP code to confirm successful recording of secret.
+   * @param user          registered user
+   * @param sharedSecret  shared secret provided by getNewSharedSecret call
+   * @param codeSubmitted latest TOTP code to confirm successful recording of secret.
    * @return true if it is now active on the account, false if secret / TOTP code do not match.
-   * @throws SegueDatabaseException - unable to save secret to account.
+   * @throws SegueDatabaseException unable to save secret to account.
    */
   public boolean activateMFAForUser(final RegisteredUserDTO user, final String sharedSecret,
                                     final Integer codeSubmitted) throws SegueDatabaseException {
@@ -1479,8 +1529,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Deactivate MFA for user's account - should only be used by admins!.
    *
-   * @param user - the User to deactivate 2FA for
-   * @throws SegueDatabaseException - unable to save secret to account.
+   * @param user the User to deactivate 2FA for
+   * @throws SegueDatabaseException unable to save secret to account.
    */
   public void deactivateMFAForUser(final RegisteredUserDTO user) throws SegueDatabaseException {
     this.secondFactorManager.deactivate2FAForUser(user);
@@ -1489,7 +1539,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Helper method to convert a user object into a userSummary DTO with as little detail as possible about the user.
    *
-   * @param userToConvert - full user object.
+   * @param userToConvert full user object.
    * @return a summarised object with minimal personal information
    */
   public UserSummaryDTO convertToUserSummaryObject(final RegisteredUserDTO userToConvert) {
@@ -1499,9 +1549,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Helper method to convert a user object into a more detailed summary object depending on the dto provided.
    *
-   * @param <T>             - The type parameter representing the detailed DTO class
-   * @param userToConvert   - Full user object.
-   * @param detailedDtoClass - The DTO class type into which the user object is to be converted
+   * @param <T>              The type parameter representing the detailed DTO class
+   * @param userToConvert    Full user object.
+   * @param detailedDtoClass The DTO class type into which the user object is to be converted
    * @return a summarised DTO object with details as per the specified detailedDTOClass
    */
   public <T extends UserSummaryDTO> T convertToUserSummary(final RegisteredUserDTO userToConvert,
@@ -1512,7 +1562,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Helper method to convert user objects into cutdown userSummary DTOs.
    *
-   * @param userListToConvert - full user objects.
+   * @param userListToConvert full user objects.
    * @return a list of summarised objects with minimal personal information
    */
   public List<UserSummaryDTO> convertToUserSummaryObjectList(final List<RegisteredUserDTO> userListToConvert) {
@@ -1527,8 +1577,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Helper method to convert user objects into cutdown DetailedUserSummary DTOs.
    *
-   * @param userListToConvert - full user objects.
-   * @param detailedDTO       - The level of detail required for the conversion
+   * @param userListToConvert full user objects.
+   * @param detailedDTO       The level of detail required for the conversion
    * @return a list of summarised objects with reduced personal information
    */
   public List<UserSummaryWithEmailAddressDTO> convertToDetailedUserSummaryObjectList(
@@ -1565,10 +1615,10 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Sends verification email for the user's current email address. The destination will match the userDTO's email.
    *
-   * @param userDTO                - user to which the email is to be sent.
-   * @param emailVerificationToken - the generated email verification token.
-   * @throws ContentManagerException - if the email template does not exist.
-   * @throws SegueDatabaseException  - if there is a database exception during the processing of the email.
+   * @param userDTO                user to which the email is to be sent.
+   * @param emailVerificationToken the generated email verification token.
+   * @throws ContentManagerException if the email template does not exist.
+   * @throws SegueDatabaseException  if there is a database exception during the processing of the email.
    */
   private void sendVerificationEmailForCurrentEmail(final RegisteredUserDTO userDTO,
                                                     final String emailVerificationToken)
@@ -1577,9 +1627,9 @@ public class UserAccountManager implements IUserAccountManager {
     EmailTemplateDTO emailVerificationTemplate =
         emailManager.getEmailTemplateDTO("email-template-email-verification");
     Map<String, Object> emailTokens =
-        ImmutableMap.of("verificationURL", this.generateEmailVerificationURL(userDTO, emailVerificationToken));
+        Map.of("verificationURL", this.generateEmailVerificationURL(userDTO, emailVerificationToken));
 
-    log.info(String.format("Sending email verification message to %s", sanitiseExternalLogValue(userDTO.getEmail())));
+    log.info("Sending email verification message to {}", sanitiseExternalLogValue(userDTO.getEmail()));
 
     emailManager.sendTemplatedEmailToUser(userDTO, emailVerificationTemplate, emailTokens, EmailType.SYSTEM);
   }
@@ -1588,11 +1638,11 @@ public class UserAccountManager implements IUserAccountManager {
    * Sends a notice email for email change to the user's current email address and then creates a copy of the user
    * with the new email to send to the sendVerificationEmailForCurrentEmail method.
    *
-   * @param userDTO       - initial user where the notice of change is to be sent.
-   * @param newEmail      - the new email which has been requested to change to.
-   * @param newEmailToken - the generated HMAC token for the new email.
-   * @throws ContentManagerException - if the email template does not exist.
-   * @throws SegueDatabaseException  - if there is a database exception during the processing of the email.
+   * @param userDTO       initial user where the notice of change is to be sent.
+   * @param newEmail      the new email which has been requested to change to.
+   * @param newEmailToken the generated HMAC token for the new email.
+   * @throws ContentManagerException if the email template does not exist.
+   * @throws SegueDatabaseException  if there is a database exception during the processing of the email.
    */
   private void sendVerificationEmailsForEmailChange(final RegisteredUserDTO userDTO,
                                                     final String newEmail,
@@ -1600,10 +1650,10 @@ public class UserAccountManager implements IUserAccountManager {
       throws ContentManagerException, SegueDatabaseException {
 
     EmailTemplateDTO emailChangeTemplate = emailManager.getEmailTemplateDTO("email-verification-change");
-    Map<String, Object> emailTokens = ImmutableMap.of("requestedemail", newEmail);
+    Map<String, Object> emailTokens = Map.of("requestedemail", newEmail);
 
-    log.info(String.format("Sending email for email address change for user (%s)"
-        + " from email (%s) to email (%s)", userDTO.getId(), userDTO.getEmail(), sanitiseExternalLogValue(newEmail)));
+    log.info("Sending email for email address change for user ({}) from email ({}) to email ({})", userDTO.getId(),
+        userDTO.getEmail(), sanitiseExternalLogValue(newEmail));
     emailManager.sendTemplatedEmailToUser(userDTO, emailChangeTemplate, emailTokens, EmailType.SYSTEM);
 
     // Defensive copy to ensure old email address is preserved (shouldn't change until new email is verified)
@@ -1616,11 +1666,11 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Logs the user in and creates the signed sessions.
    *
-   * @param request  - for the session to be attached
-   * @param response - for the session to be attached.
-   * @param user     - the user who is being logged in.
+   * @param request  for the session to be attached
+   * @param response for the session to be attached.
+   * @param user     the user who is being logged in.
    * @return the DTO version of the user.
-   * @throws SegueDatabaseException - if there is a problem with the database.
+   * @throws SegueDatabaseException if there is a problem with the database.
    */
   private RegisteredUserDTO logUserIn(final HttpServletRequest request, final HttpServletResponse response,
                                       final RegisteredUser user) throws SegueDatabaseException {
@@ -1641,8 +1691,8 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * To complete this the user must also complete MFA authentication.
    *
-   * @param response - response to update cookie information
-   * @param user     - user of interest
+   * @param response response to update cookie information
+   * @param user     user of interest
    */
   private void partialLogInForMFA(final HttpServletResponse response, final RegisteredUser user)
       throws SegueDatabaseException {
@@ -1654,7 +1704,7 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * NOTE: You should not treat users has having logged in using this method as they haven't completed login.
    *
-   * @param request - http request containing the cookie
+   * @param request http request containing the cookie
    * @return the user retrieved using the id extracted from the cookie
    */
   private RegisteredUser retrievePartialLogInForMFA(final HttpServletRequest request) {
@@ -1686,7 +1736,7 @@ public class UserAccountManager implements IUserAccountManager {
                 .toString());
 
             logManager.logInternalEvent(userDTO, SegueServerLogType.MERGE_USER,
-                ImmutableMap.of("oldAnonymousUserId", anonymousUser.getSessionId()));
+                Map.of("oldAnonymousUserId", anonymousUser.getSessionId()));
 
             // delete the session attribute as merge has completed.
             try {
@@ -1708,9 +1758,9 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Library method that allows the api to locate a user object from the database based on a given unique id.
    *
-   * @param userId - to search for.
+   * @param userId to search for.
    * @return user or null if we cannot find it.
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   private RegisteredUser findUserById(final Long userId) throws SegueDatabaseException {
     if (null == userId) {
@@ -1723,11 +1773,11 @@ public class UserAccountManager implements IUserAccountManager {
    * Library method that allows the api to locate a user object from the database based on a given unique email
    * address.
    *
-   * @param email - to search for.
+   * @param email to search for.
    * @return user or null if we cannot find it.
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
-  private RegisteredUser findUserByEmail(final String email) throws SegueDatabaseException {
+  public RegisteredUser findUserByEmail(final String email) throws SegueDatabaseException {
     if (null == email) {
       return null;
     }
@@ -1739,10 +1789,10 @@ public class UserAccountManager implements IUserAccountManager {
    * user.
    *
    * @param federatedAuthenticator the federatedAuthenticator we are using for authentication
-   * @param userFromProvider       - the user object returned by the auth provider.
+   * @param userFromProvider       the user object returned by the auth provider.
    * @return a Segue UserDO that exists in the segue database.
-   * @throws NoUserException        - If we are unable to locate the user id based on the lookup reference provided.
-   * @throws SegueDatabaseException - If there is an internal database error.
+   * @throws NoUserException        If we are unable to locate the user id based on the lookup reference provided.
+   * @throws SegueDatabaseException If there is an internal database error.
    */
   private RegisteredUser registerUserWithFederatedProvider(final AuthenticationProvider federatedAuthenticator,
                                                            final UserFromAuthProvider userFromProvider)
@@ -1787,7 +1837,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * IsUserValid This function will check that the user object is valid.
    *
-   * @param userToValidate - the user to validate.
+   * @param userToValidate the user to validate.
    * @return true if it meets the internal storage requirements, false if not.
    */
   private boolean isUserValid(final RegisteredUser userToValidate) {
@@ -1797,7 +1847,7 @@ public class UserAccountManager implements IUserAccountManager {
   public static boolean isEmailValid(final String email) {
     return email != null
         && !email.isEmpty()
-        && email.matches(".*(@.+\\.[^.]+|-(facebook|google|twitter)$)")
+        && email.matches("^.+(?:@(?:[a-zA-Z0-9-]{1,63}+\\.)++[a-zA-Z]{1,63}+|-(?:facebook|google|twitter))$")
         && EMAIL_PERMITTED_CHARS_REGEX.matcher(email).matches()
         && !EMAIL_CONSECUTIVE_FULL_STOP_REGEX.matcher(email).find();
   }
@@ -1805,7 +1855,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * This function checks that the name provided is valid.
    *
-   * @param name - the name to validate.
+   * @param name the name to validate.
    * @return true if the name is valid, false otherwise.
    */
   public static boolean isUserNameValid(final String name) {
@@ -1819,8 +1869,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Converts the sensitive UserDO into a limited DTO.
    *
-   * @param user - DO
-   * @return user - DTO
+   * @param user DO
+   * @return user DTO
    */
   private RegisteredUserDTO convertUserDOToUserDTO(final RegisteredUser user) {
     if (null == user) {
@@ -1832,17 +1882,16 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Converts a list of userDOs into a List of userDTOs.
    *
-   * @param users - list of DOs to convert
+   * @param users list of DOs to convert
    * @return the list of user dtos.
    */
   private List<RegisteredUserDTO> convertUserDOListToUserDTOList(final List<RegisteredUser> users) {
-    List<RegisteredUser> userDOs = users.parallelStream().filter(Objects::nonNull).collect(Collectors.toList());
+    List<RegisteredUser> userDOs = users.parallelStream().filter(Objects::nonNull).toList();
     if (userDOs.isEmpty()) {
       return new ArrayList<>();
     }
 
-    return users.parallelStream().map(user -> this.dtoMapper.map(user))
-        .collect(Collectors.toList());
+    return users.parallelStream().map(this.dtoMapper::map).toList();
   }
 
   /**
@@ -1850,7 +1899,7 @@ public class UserAccountManager implements IUserAccountManager {
    * <br>
    * This method will validate the session as well returning null if it is invalid.
    *
-   * @param request - to retrieve session information from
+   * @param request to retrieve session information from
    * @return Returns the current UserDTO if we can get it or null if user is not currently logged in / there is an
    *     invalid session
    */
@@ -1861,7 +1910,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Retrieves anonymous user information if it is available.
    *
-   * @param request - request containing session information.
+   * @param request request containing session information.
    * @return An anonymous user containing any anonymous question attempts (which could be none)
    */
   private AnonymousUserDTO getAnonymousUserDTO(final HttpServletRequest request) throws SegueDatabaseException {
@@ -1871,7 +1920,7 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Retrieves anonymous user information if it is available.
    *
-   * @param request - request containing session information.
+   * @param request request containing session information.
    * @return An anonymous user containing any anonymous question attempts (which could be none)
    */
   private AnonymousUser getAnonymousUserDO(final HttpServletRequest request) throws SegueDatabaseException {
@@ -1888,8 +1937,7 @@ public class UserAccountManager implements IUserAccountManager {
 
     } else {
       // reuse existing one
-      if (request.getSession().getAttribute(ANONYMOUS_USER) instanceof String) {
-        String userId = (String) request.getSession().getAttribute(ANONYMOUS_USER);
+      if (request.getSession().getAttribute(ANONYMOUS_USER) instanceof String userId) {
         user = this.temporaryUserCache.getById(userId);
 
         if (null == user) {
@@ -1911,8 +1959,8 @@ public class UserAccountManager implements IUserAccountManager {
   /**
    * Hide the Jetty internals of session IDs and return an anonymous user ID.
    *
-   * @param request - to extract the Jetty session ID
-   * @return - a String suitable for use as an anonymous identifier
+   * @param request to extract the Jetty session ID
+   * @return a String suitable for use as an anonymous identifier
    */
   private String getAnonymousUserIdFromRequest(final HttpServletRequest request) {
     return request.getSession().getId().replace("node0", "");
@@ -1922,7 +1970,7 @@ public class UserAccountManager implements IUserAccountManager {
    * Update the users' last seen field.
    *
    * @param user of interest
-   * @throws SegueDatabaseException - if an error occurs with the update.
+   * @throws SegueDatabaseException if an error occurs with the update.
    */
   private void updateLastSeen(final RegisteredUser user) throws SegueDatabaseException {
     if (user.getLastSeen() == null) {
@@ -1937,8 +1985,10 @@ public class UserAccountManager implements IUserAccountManager {
   }
 
   /**
+   * Generate a verification link to be sent to a new user's email address.
+   *
    * @param userDTO                the userDTO of interest
-   * @param emailVerificationToken the verifcation token
+   * @param emailVerificationToken the verification token
    * @return verification URL
    */
   private String generateEmailVerificationURL(final RegisteredUserDTO userDTO, final String emailVerificationToken) {
@@ -1966,7 +2016,7 @@ public class UserAccountManager implements IUserAccountManager {
    * @param timeIntervals An array of time ranges (in string format) for which to get the user counts.
    *                      Each time range is used in the SQL query to filter the results.
    * @return map of counts for each role
-   * @throws SegueDatabaseException - if there is a problem with the database.
+   * @throws SegueDatabaseException if there is a problem with the database.
    */
   public Map<TimeInterval, Map<Role, Long>> getActiveRolesOverPrevious(final TimeInterval[] timeIntervals)
       throws SegueDatabaseException {
@@ -1977,7 +2027,7 @@ public class UserAccountManager implements IUserAccountManager {
    * Count users' reported genders.
    *
    * @return map of counts for each gender.
-   * @throws SegueDatabaseException - if there is a problem with the database.
+   * @throws SegueDatabaseException if there is a problem with the database.
    */
   public Map<Gender, Long> getGenderCount() throws SegueDatabaseException {
     return this.database.getGenderCount();
@@ -1987,7 +2037,7 @@ public class UserAccountManager implements IUserAccountManager {
    * Count users' reported school information.
    *
    * @return map of counts for students who have provided or not provided school information
-   * @throws SegueDatabaseException - if there is a problem with the database.
+   * @throws SegueDatabaseException if there is a problem with the database.
    */
   public Map<SchoolInfoStatus, Long> getSchoolInfoStats() throws SegueDatabaseException {
     return this.database.getSchoolInfoStats();
@@ -1997,7 +2047,7 @@ public class UserAccountManager implements IUserAccountManager {
    * Count the number of anonymous users currently in our temporary user cache.
    *
    * @return the number of anonymous users
-   * @throws SegueDatabaseException - if there is a problem with the database.
+   * @throws SegueDatabaseException if there is a problem with the database.
    */
   public Long getNumberOfAnonymousUsers() throws SegueDatabaseException {
     return temporaryUserCache.getCountOfAnonymousUsers();
@@ -2014,6 +2064,7 @@ public class UserAccountManager implements IUserAccountManager {
     return dtoMapper.map(updatedUser);
   }
 
+  @SuppressWarnings({"java:S3457", "java:S6126"})
   public void sendRoleChangeRequestEmail(final HttpServletRequest request, final RegisteredUserDTO user,
                                          final Role requestedRole, final Map<String, String> requestDetails)
       throws SegueDatabaseException, ContentManagerException, MissingRequiredFieldException {
@@ -2060,7 +2111,7 @@ public class UserAccountManager implements IUserAccountManager {
     emailManager.sendContactUsFormEmail(properties.getProperty(Constants.MAIL_RECEIVERS), emailValues);
 
     logManager.logEvent(user, request, SegueServerLogType.CONTACT_US_FORM_USED,
-        ImmutableMap.of("message", String.format("%s %s (%s) - %s", user.getGivenName(),
+        Map.of("message", String.format("%s %s (%s) - %s", user.getGivenName(),
             user.getFamilyName(), user.getEmail(), emailMessage)));
   }
 
